--- a/basketball_team_recruitment.ipynb
+++ b/basketball_team_recruitment.ipynb
@@ -3976,6 +3976,11 @@
     "5.1 Jika Machine Learning Anda menyatakan seorang pemain tidak berpotensi maka tim Anda akan langsung mencoret nama pemain tersebut.\n",
     "5.2 Sebaliknya jika lolos pada seleksi Machine Learning Anda, para pemain tadi akan direkrut dan mengikuti pelatihan ke tahap selanjutnya.\n",
     "\n",
+    "- Mengurangi probabilitas model melakukan False Negative (Sebenarnya pemain berpotensi, namun terprediksi tidak berpotensi) \n",
+    "- Mengurangi probabilitas model melakukan False Positive (Sebenarnya pemain tidak berpotensi, namun terprediksi berpotensi)\n",
+    "\n",
+    "About the three machine learning models above, each metric evaluation model already has a fairly good value, this can be seen from the accuracy value of the model which is 1.00. However, to determine the best model, we also need to consider the value of precision, recall, and f1_score. The machine learning model Gradient Boost Classifier is a model that has the highest precision, recall and f1_score values, namely 0.99, so that this model is the best model for making predictions on the testing dataset. \n",
+    "\n",
     "Based on statement in this case, what is done is to reduce the probability of the model doing False Negatives, which is a potential player, but it is predicted that there is no potential). this is because if a player has potential but is predicted not to have potential, he will immediately be dropped from the team. This situation will certainly be detrimental to the team because the players who have been crossed out are potential players. Conversely, if the player has no potential but is predicted to have potential, of course, they will remain in the team and can carry out training. With this training, what was initially not potential could become potential player."
    ]
   },
